Créer et traite fichiers de transactions. Ajoute en base les données. Déplace les fichiers traités dans des logs.

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Projet.TestLuhn
+/Projet.Test/Projet.Test.csproj
+/Projet.Test/Program.cs
